--- a/rim/py_neo_quant_rim_adequate_price.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price.ipynb
@@ -60,7 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name = '유니슨'"
+    "company_name = '현대건설'\n",
+    "company_code = nq.get_company_code(company_name, companies)\n",
+    "print('company name : ' + company_name)\n",
+    "print('company code : ' + company_code)"
    ]
   },
   {
@@ -93,10 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_code = nq.get_company_code(company_name, companies)\n",
-    "print('company name : ' + company_name)\n",
-    "print('company code : ' + company_code)\n",
-    "\n",
     "if not company_code.startswith('A'):\n",
     "    company_code = 'A' + company_code\n",
     "\n",
@@ -152,6 +151,15 @@
    "metadata": {},
    "source": [
     "## get asset, roe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot_tables[10]"
    ]
   },
   {
@@ -269,11 +277,12 @@
    },
    "outputs": [],
    "source": [
-    "price_high = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 1)\n",
-    "price_middel = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.9)\n",
-    "price_low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.8)\n",
-    "price_very_low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.5)\n",
+    "price_high = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 1)\n",
+    "price_middel = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.9)\n",
+    "price_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.8)\n",
+    "price_very_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.5)\n",
     "\n",
+    "print('very low : ' + str(price_very_low))\n",
     "print('buy : below ' + str(price_low))\n",
     "print('sell 1/3 : ' + str(price_middel))\n",
     "print('sell 1/3 : ' + str(price_high))"
@@ -298,6 +307,38 @@
     "price_df['price_low'] = [price_low] * len(price_df)\n",
     "price_df['price_middle'] = [price_middel] * len(price_df)\n",
     "price_df['price_high'] = [price_high] * len(price_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## calc disparate rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_df['dis_rate'] = price_df[company_code] / price_df['price_low']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('disrate : ' + str(price_df['dis_rate'][-1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## show chart"
    ]
   },
   {
