--- a/rim/py_neo_quant_rim_my_port.ipynb
+++ b/rim/py_neo_quant_rim_my_port.ipynb
@@ -134,7 +134,8 @@
    "outputs": [],
    "source": [
     "# https://www.kisrating.co.kr/ratingsStatistics/statics_spread.do\n",
-    "expected_ratio = 7.91"
+    "base_profit_ratio = nq.get_base_profit_ratio()\n",
+    "base_profit_ratio"
    ]
   },
   {
@@ -145,7 +146,7 @@
    "source": [
     "company_list = my_port.index\n",
     "for company_name in company_list:\n",
-    "    nq.show_more_adequate_price_chart(company_name, companies, expected_ratio)\n",
+    "    nq.show_more_adequate_price_chart(company_name, companies, base_profit_ratio)\n",
     "    time.sleep(1)\n",
     "    print('=================================================')\n",
     "    print(' ')"
@@ -159,7 +160,7 @@
    },
    "outputs": [],
    "source": [
-    "nq.show_more_adequate_price_chart('티에스이', companies, 7.91)"
+    "nq.show_more_adequate_price_chart('티에스이', companies, base_profit_ratio)"
    ]
   }
  ],
