--- a/rim/py_neo_quant_rim_adequate_price.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price.ipynb
@@ -60,7 +60,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "company_name = '현대건설'\n",
+    "# company_name = '현대건설'\n",
+    "company_name = '메리츠화재'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
