--- a/rim/py_neo_quant_rim_crawling_fnguide.ipynb
+++ b/rim/py_neo_quant_rim_crawling_fnguide.ipynb
@@ -92,7 +92,8 @@
    "outputs": [],
    "source": [
     "# https://www.kisrating.co.kr/ratingsStatistics/statics_spread.do\n",
-    "expected_ratio = 7.91"
+    "expected_ratio = nq.get_base_profit_ratio()\n",
+    "expected_ratio"
    ]
   },
   {
