--- a/rim/py_neo_quant_rim_sector_screening.ipynb
+++ b/rim/py_neo_quant_rim_sector_screening.ipynb
@@ -175,13 +175,13 @@
     "            roe = pd.to_numeric(fr_df.loc[code][col]['ROE'])\n",
     "            per = pd.to_numeric(fr_df.loc[code][col]['PER'])\n",
     "            pbr = pd.to_numeric(fr_df.loc[code][col]['PBR'])\n",
-    "            asset = pd.to_numeric(fr_df.loc[code][col]['지배주주지분']) * 100000000\n",
+    "            net_profit = pd.to_numeric(fr_df.loc[code][col]['지배주주지분']) * 100000000\n",
     "            debt_rate = pd.to_numeric(fr_df.loc[code][col]['부채비율'])\n",
     "            keep_rate = pd.to_numeric(fr_df.loc[code][col]['유보율'])\n",
     "            interest_rate = pd.to_numeric(fr_df.loc[code][col]['배당수익률'])\n",
     "\n",
     "                \n",
-    "            if not math.isnan(roe) and not math.isnan(asset):\n",
+    "            if not math.isnan(roe) and not math.isnan(net_profit):\n",
     "                print('standard date : ' + col)\n",
     "                stock_count = sector_df.loc[code]['주식수']\n",
     "                sector_df.at[code, '기준일'] = col\n",
@@ -194,17 +194,17 @@
     "                \n",
     "                sector_df.at[code, 'expectation'] = base_profit_ratio\n",
     "                print('stock_count : ' + str(stock_count))\n",
-    "                print('asset : ' + str(asset))\n",
+    "                print('net_profit : ' + str(net_profit))\n",
     "                print('roe : ' + str(roe))\n",
     "                \n",
-    "                high = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 1)\n",
+    "                high = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 1)\n",
     "    #             print('high : ' + str(high))\n",
     "                sector_df.at[code, 'high'] = high\n",
-    "                middle = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.9)\n",
+    "                middle = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.9)\n",
     "                sector_df.at[code, 'middle'] = middle\n",
-    "                low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.8)\n",
+    "                low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.8)\n",
     "                sector_df.at[code, 'low'] = low\n",
-    "                very_low = nq.get_more_adequate_price(asset, roe, base_profit_ratio, stock_count, 0.5)\n",
+    "                very_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.5)\n",
     "                sector_df.at[code, 'very_low'] = very_low\n",
     "                break\n",
     "        except ValueError:\n",
