--- a/rim/py_neo_quant_rim_adequate_price_advanced.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price_advanced.ipynb
@@ -20,6 +20,7 @@
     "import bs4\n",
     "import math\n",
     "import time\n",
+    "from datetime import date, timedelta\n",
     "import NeoQuant as nq\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import font_manager, rc\n",
@@ -28,7 +29,7 @@
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
     "# pd.set_option('display.max_columns', None)\n",
-    "# pd.set_option('display.max_rows', 500)"
+    "# pd.set_option('display.max_rows', 1000)"
    ]
   },
   {
@@ -61,7 +62,7 @@
    "outputs": [],
    "source": [
     "# company_name = '현대건설'\n",
-    "company_name = '케이티앤지'\n",
+    "company_name = 'HDC현대산업개발'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
@@ -203,8 +204,8 @@
     "    roes = info.loc[roe_index_name][big_col_name]\n",
     "    assets = info.loc[asset_index_name][big_col_name]\n",
     "    for index in assets.index:\n",
-    "        if index.endswith(('(E)')):\n",
-    "            continue\n",
+    "#         if index.endswith(('(E)')):\n",
+    "#             continue\n",
     "        if not math.isnan(assets[index]) and not math.isnan(roes[index]):\n",
     "            year_name = index\n",
     "#             year_name = str(pd.to_datetime(year_name).year)\n",
@@ -220,6 +221,16 @@
     "\n",
     "    roe = info.loc[roe_index_name][big_col_name, base_year_name]\n",
     "    return roe\n",
+    "\n",
+    "def get_per(fr_df, base_year_name):\n",
+    "    big_col_name = 'Annual'\n",
+    "    per_index_name = 'PER'\n",
+    "    \n",
+    "    info = fr_df\n",
+    "    info = info.set_index(info.columns[0])\n",
+    "\n",
+    "    per = info.loc[per_index_name][big_col_name, base_year_name]\n",
+    "    return per\n",
     "\n",
     "def get_net_income(fr_df, base_year_name):\n",
     "    big_col_name = 'Annual'\n",
@@ -272,26 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fr_df_index = get_fr_df_index(snapshot_tables)\n",
-    "fr_df = snapshot_tables[fr_df_index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_year_name_list(fr_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price_df_tmp = nq.request_price_list(company_code, 'day', 2000)"
+    "price_df_tmp = nq.request_price_list(company_code, 'day', 1500)"
    ]
   },
   {
@@ -313,42 +305,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for year_name in year_name_list:\n",
-    "#     print(year_name)\n",
-    "    roe =  get_roe(fr_df, year_name)\n",
-    "    net_profit = get_net_profit(fr_df, year_name)\n",
-    "    \n",
-    "    price_high = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 1)\n",
-    "    price_middle = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.9)\n",
-    "    price_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.8)\n",
-    "    price_very_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.5)\n",
-    "\n",
-    "\n",
-    "    print('=====================================')\n",
-    "    print('base year : ' + year_name)\n",
-    "    print('net profit : ' + str(net_profit))\n",
-    "    print('roe : ' + str(roe))\n",
-    "    print('very low : ' + str(price_very_low))\n",
-    "    print('buy : below ' + str(price_low))\n",
-    "    print('sell 1/3 : ' + str(price_middel))\n",
-    "    print('sell 1/3 : ' + str(price_high))\n",
-    "\n",
-    "    base_year = str(pd.to_datetime(year_name).year)\n",
-    "#     print(base_year)\n",
-    "    try:\n",
-    "        price_df.loc[base_year]['price_very_low'] = [price_very_low] * len(price_df.loc[base_year])\n",
-    "        price_df.loc[base_year]['price_low'] = [price_low] * len(price_df.loc[base_year])\n",
-    "        price_df.loc[base_year]['price_middle'] = [price_middle] * len(price_df.loc[base_year])\n",
-    "        price_df.loc[base_year]['price_high'] = [price_high] * len(price_df.loc[base_year])\n",
-    "    except KeyError:\n",
-    "        print('key error')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## set roe manually"
+    "fr_df_index = get_fr_df_index(snapshot_tables)\n",
+    "print('fr_df_index : ' + str(fr_df_index))\n",
+    "fr_df = snapshot_tables[fr_df_index]"
    ]
   },
   {
@@ -357,7 +316,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# roe = 20"
+    "year_name_list = get_year_name_list(fr_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_year = price_df.iloc[-1].name.year\n",
+    "\n",
+    "for year_name in year_name_list:\n",
+    "#     print(year_name)\n",
+    "    roe =  get_roe(fr_df, year_name)\n",
+    "    net_profit = get_net_profit(fr_df, year_name)\n",
+    "    per = get_per(fr_df, year_name)\n",
+    "    \n",
+    "    price_high = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 1)\n",
+    "    price_middle = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.9)\n",
+    "    price_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.8)\n",
+    "    price_very_low = nq.get_more_adequate_price(net_profit, roe, base_profit_ratio, stock_count, 0.5)\n",
+    "    \n",
+    "\n",
+    "    print('=====================================')\n",
+    "    print('base year : ' + year_name)\n",
+    "    print('net profit : ' + str(net_profit))\n",
+    "    print('roe : ' + str(roe))\n",
+    "    print('per : ' + str(per))\n",
+    "    print('very low : ' + str(price_very_low))\n",
+    "    print('buy : below ' + str(price_low))\n",
+    "    print('sell 1/3 : ' + str(price_middle))\n",
+    "    print('sell 1/3 : ' + str(price_high))\n",
+    "\n",
+    "    \n",
+    "    if (price_very_low >= price_low):\n",
+    "        price_low = int(price_very_low * 1.05)\n",
+    "        price_middle = int(price_low * 1.05)\n",
+    "        price_high = int(price_middle * 1.05)\n",
+    "        \n",
+    "        print('======= modify ===============')\n",
+    "        print('very low : ' + str(price_very_low))\n",
+    "        print('buy : below ' + str(price_low))\n",
+    "        print('sell 1/3 : ' + str(price_middle))\n",
+    "        print('sell 1/3 : ' + str(price_high))\n",
+    "        \n",
+    "    if (year_name.endswith('(E)')):\n",
+    "        year_name = year_name.replace('(E)', '')\n",
+    "    \n",
+    "    base_year = pd.to_datetime(year_name).year\n",
+    "\n",
+    "    if (base_year == final_year):\n",
+    "        start_date = price_df.iloc[-1].name + timedelta(days=1)\n",
+    "        end_date = pd.to_datetime(str(final_year) + '-12-31')\n",
+    "        year_list = pd.date_range(start_date, end_date, freq='d')\n",
+    "        year_df = pd.DataFrame(0, index=year_list, columns=price_df.columns)\n",
+    "        price_df = price_df.append(year_df)\n",
+    "    \n",
+    "    if (base_year > final_year):\n",
+    "#         print(base_year)\n",
+    "        start_year = pd.to_datetime(str(base_year))\n",
+    "        year_list = pd.date_range(start_year, freq=pd.DateOffset(days=1), periods=365)\n",
+    "        year_df = pd.DataFrame(0, index=year_list, columns=price_df.columns)\n",
+    "        price_df = price_df.append(year_df)\n",
+    "        \n",
+    "    base_year = str(base_year)\n",
+    "    try:\n",
+    "        price_df.loc[base_year]['price_very_low'] = [price_very_low] * len(price_df.loc[base_year])\n",
+    "        price_df.loc[base_year]['price_low'] = [price_low] * len(price_df.loc[base_year])\n",
+    "        price_df.loc[base_year]['price_middle'] = [price_middle] * len(price_df.loc[base_year])\n",
+    "        price_df.loc[base_year]['price_high'] = [price_high] * len(price_df.loc[base_year])\n",
+    "    except KeyError:\n",
+    "        print('key error')"
    ]
   },
   {
