--- a/rim/py_neo_quant_rim_adequate_price_advanced.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price_advanced.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# company_name = '현대건설'\n",
-    "company_name = 'HDC현대산업개발'\n",
+    "company_name = '대우건설'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
@@ -362,6 +362,7 @@
     "        print('sell 1/3 : ' + str(price_high))\n",
     "        \n",
     "    if (year_name.endswith('(E)')):\n",
+    "#         continue\n",
     "        year_name = year_name.replace('(E)', '')\n",
     "    \n",
     "    base_year = pd.to_datetime(year_name).year\n",
