--- a/rim/py_neo_quant_rim_adequate_price_advanced.ipynb
+++ b/rim/py_neo_quant_rim_adequate_price_advanced.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# company_name = '현대건설'\n",
-    "company_name = '대우건설'\n",
+    "company_name = 'SPC삼립'\n",
     "company_code = nq.get_company_code(company_name, companies)\n",
     "print('company name : ' + company_name)\n",
     "print('company code : ' + company_code)"
@@ -350,16 +350,16 @@
     "    print('sell 1/3 : ' + str(price_high))\n",
     "\n",
     "    \n",
-    "    if (price_very_low >= price_low):\n",
-    "        price_low = int(price_very_low * 1.05)\n",
-    "        price_middle = int(price_low * 1.05)\n",
-    "        price_high = int(price_middle * 1.05)\n",
+    "#     if (price_very_low >= price_low):\n",
+    "#         price_low = int(price_very_low * 1.05)\n",
+    "#         price_middle = int(price_low * 1.05)\n",
+    "#         price_high = int(price_middle * 1.05)\n",
     "        \n",
-    "        print('======= modify ===============')\n",
-    "        print('very low : ' + str(price_very_low))\n",
-    "        print('buy : below ' + str(price_low))\n",
-    "        print('sell 1/3 : ' + str(price_middle))\n",
-    "        print('sell 1/3 : ' + str(price_high))\n",
+    "#         print('======= modify ===============')\n",
+    "#         print('very low : ' + str(price_very_low))\n",
+    "#         print('buy : below ' + str(price_low))\n",
+    "#         print('sell 1/3 : ' + str(price_middle))\n",
+    "#         print('sell 1/3 : ' + str(price_high))\n",
     "        \n",
     "    if (year_name.endswith('(E)')):\n",
     "#         continue\n",
