--- a/rim/py_neo_quant_rim_sector_screening.ipynb
+++ b/rim/py_neo_quant_rim_sector_screening.ipynb
@@ -27,7 +27,7 @@
     "rc('font', family='AppleGothic')\n",
     "plt.rcParams['axes.unicode_minus'] = False\n",
     "\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.max_columns', None)\n",
     "# pd.set_option('display.max_rows', 500)"
    ]
   },
